# sat-solving

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
blatt 1/: CMakeCache.txt  CMakeLists.txt  sudoku_sat.cpp
blatt 1/aufgabe1/: README.md  solver.cpp
blatt 1/aufgabe1/examples/: small_test.col
blatt 1/aufgabe2/: sudoku_sat  sudoku_sat.cpp
blatt 1/aufgabe2/examples/: puzzle02a.sudoku
blatt 1/aufgabe2/sudoku_sat.dSYM/Contents/: Info.plist
blatt 1/aufgabe2/sudoku_sat.dSYM/Contents/Resources/DWARF/: sudoku_sat
blatt 1/aufgabe2/sudoku_sat.dSYM/Contents/Resources/Relocations/aarch64/: sudoku_sat.yml
blatt 1/aufgabe4/: pythagorean.cpp
src/: ipasir.h  solver.cpp
src/scripts/: build.sh
